# AffinePreprocess

./: .gitignore  CMakeConfig.h.in  CMakeLists.txt  README.md  cbuild.sh
include/proc/: process.h
src/demo/: main.cpp
src/proc/: process.cpp
src/yolo/: preprocess.cu  preprocess.h
